--- a/package.json
+++ b/package.json
@@ -2,5 +2,10 @@
   "name": "web-scraper",
   "version": "1.0.0",
   "main": "index.js",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "axios": "^0.21.4",
+    "cheerio": "^1.0.0-rc.10",
+    "iconv-lite": "^0.6.3"
+  }
 }
